created memory show page

--- a/app/views/memories/show.html.erb
+++ b/app/views/memories/show.html.erb
@@ -1,25 +1,12 @@
-<h1> Ingredients for a <%= @memory.name  %></h1>
+<h1> Memory: <%= @memory.name  %></h1>
 
 <ul>
-  <% @memory.each do |memory| %>
-    <li><%= memory.name %>
-        <%= memory.description %>
-        <%= memory.description %>
-    </li>
-  <% end %>
-
-  <%= link_to "Add new dose", new_memory_dose_path(@memory.id) %>
-  <%= link_to "Memories list", memories_path %>
-
+    <li>Description: <%= @memory.description %></li>
+    <li>Price: $<%= @memory.price %></li>
+    <li>Duration: <%= @memory.duration %> minutes</li>
+    <li>Location: <%= @memory.location %></li>
+    <li>Created by:<%= @memory.creator_id %></li>
 </ul>
 
-# t.string "name"
-# t.string "description"
-# t.integer "price"
-# t.string "duration"
-# t.string "location"
-# t.string "category"
-# t.bigint "creator_id", null: false
-# t.datetime "created_at", precision: 6, null: false
-# t.datetime "updated_at", precision: 6, null: false
-# t.index ["creator_id"], name: "index_memories_on_creator_id"
+<%= link_to "back to memories", memories_path %>
+<%= link_to "back to home", root_path %>
