added CSS updates and new images for home page, navbar, fixed home redirect, relabeled messages to dashboard, redid index to include description and price

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<p><%= link_to "View all memories", memories_path %></p>
+<h1>RE: LIVE</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+  <div class="container">
+    <h1>Bring your fantasies to life with <strong>RE:Live</strong> experience the <strong>hottest new form of wish fulfillment</strong>!</h1>
+    <p>Be anyone you want to be, for at least a day.</p>
+    <a class="btn-gradient" href=memories>View all memories</a>
+  </div>
+</div>
+
 
