started working on reviews controller and view. Also updated booking model

--- a/app/views/memories/show.html.erb
+++ b/app/views/memories/show.html.erb
@@ -10,3 +10,4 @@
 
 <%= link_to "back to memories", memories_path %>
 <%= link_to "back to home", root_path %>
+<%= link_to 'Leave a review', new_memory_review_path(@memory) %>
