redirect to my_memories if you click create. Added a back button on memory create page

--- a/app/views/memories/new.html.erb
+++ b/app/views/memories/new.html.erb
@@ -11,6 +11,6 @@
   <%= f.submit %>
   <% end %>
 
-<%= link_to "Back to home", memories_path %>
+<%= link_to "Back to Memories", my_memories_path %>
 
 </div>
