FIx: booking page on dashboard

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -23,6 +23,7 @@
             <p><%= booking.memory.name%></p>
             <p><%= booking.price%></p>
             <p><%= booking.status%></p>
+            <p><%= booking.location%></p>
             <p><%= booking.start_date%></p>
             <p><%= booking.end_date%></p>
           </div>
