--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -26,8 +26,7 @@
             <p><%= booking.price%></p>
             <p><%= booking.status%></p>
             <p><%= booking.start_date%></p>
-            <p><%= booking.end_date%></p>
-            
+            <%= link_to "Leave a Review", new_booking_review_path %>
           </div>
         </div>
       </div>
