updated reviews controller, reviews view and dashboard to support the addition of reviews. Have confirmed views can be created and saved. Now, just need to be able to view them.

--- a/app/views/Reviews/new.html.erb
+++ b/app/views/Reviews/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h1> Create a new Review for <%= @memory.name %> </h1>
+<h1> Write a new Review </h1>
 
 <%= simple_form_for([@booking, @review]) do |f| %>
   <%= f.input :content %>
