--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -26,7 +26,7 @@
             <p><%= booking.price%></p>
             <p><%= booking.status%></p>
             <p><%= booking.start_date%></p>
-            <%= link_to "Leave a Review", new_booking_review_path %>
+            <%= link_to "Leave a Review", new_booking_review_path(booking), class: 'btn-gradient' %>
           </div>
         </div>
       </div>
