--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <h1>Bring your fantasies to life with <strong>RE:Live</strong> experience the <strong>hottest new form of wish fulfillment</strong>!</h1>
     <p>Be anyone you want to be, for at least a day.</p>
-    <a class="btn-gradient" href=memories>View all memories</a>
+    <%= link_to "View all memories", memories_path, class:"btn-gradient" %>
   </div>
 </div>
 
