--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -21,11 +21,16 @@
       <div class="card-trip">
           <div>
             <p><%= booking.memory.name%></p>
-            <p><%= booking.price%></p>
-            <p><%= booking.status%></p>
+            <p><%= "$#{booking.price}"%></p>
+            <p>      
+              <% if booking.status %>
+                Approved
+              <% else %> 
+                Awaiting Approval
+              <% end %>   
+            </p>
             <p><%= booking.location%></p>
-            <p><%= booking.start_date%></p>
-            <p><%= booking.end_date%></p>
+            <p><%= booking.start_date.strftime("%A, %b %d") %></p>
           </div>
         </div>
       </div>
