--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,11 +11,18 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
+.card-trip-img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+}
+
 .card-trip > img {
   height: 200px;
   width: 100%;
   object-fit: cover;
 }
+
 
 .card-trip h2 {
   font-size: 16px;
