--- a/app/views/memories/show.html.erb
+++ b/app/views/memories/show.html.erb
@@ -17,6 +17,10 @@
             <p><%= review.booking.customer.username %></p>
             <p><%= review.content %></p>
             <p><%= review.rating %></p>
+            <p> <% if current_user == review.booking.customer %>
+                    <%= link_to "Destroy Review", review_path(review), method: "delete" %>
+            <% end %>
+            </p>
         </div>
     <% end %>
 
