--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "https://puu.sh/GQGNW/06c5a09e63.png" %>
-    <% end %>
-
+    <%= cl_image_tag "https://res.cloudinary.com/drdoomsday/image/upload/v1606284303/re:live/Screen_Shot_2020-11-25_at_4.44.07_pm_fessxo.png" %>
+  <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
