--- a/app/views/dashboards/my_memories.html.erb
+++ b/app/views/dashboards/my_memories.html.erb
@@ -21,16 +21,16 @@
 
 <% @my_memories.each do |memory| %>
       <div class="card-trip">
-        <%= cl_image_tag memory.photo.key, class: 'card-trip-img' %>
+        <%= cl_image_tag memory.photo_url, class: 'card-trip-img' %>
         <div class="card-trip-infos">
           <div>
             <h2><%= link_to memory.name, memory_path(memory)%></h2>
             <p><%= memory.description%></p>
           </div>
           <%= link_to "View all bookings", memory_bookings_path(memory), class:"btn-gradient" %>
-          
+
           <h2 class="card-trip-pricing">$<%= memory.price%></h2>
-          <%= cl_image_tag memory.creator.photo.key, class: 'avatar' %>
+          <%= cl_image_tag memory.creator.photo_url, class: 'avatar' %>
         </div>
       </div>
     <% end %>
