changed backround color to black

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   </head>
 
-  <body>
+  <body class="black-backround">
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
 
