--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -25,3 +25,38 @@
   background: #1BCB7F;
   color: white;
 }
+
+.btn-blue {
+  border: 1px solid;
+  background-color: transparent;
+  text-transform: uppercase;
+  font-size: 14px;
+  padding: 10px 20px;
+  font-weight: 300;
+  color: #4cc9f0;
+}
+.btn-blue:hover {
+  color: white;
+  border: 0;
+  background-color: #4cc9f0;
+  -webkit-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
+  -moz-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
+  box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
+}
+.btn-blue-no-border {
+  background-color: transparent;
+  
+  font-size: 14px;
+  padding: 10px 20px;
+  font-weight: 300;
+  color: #4cc9f0;
+}
+.btn-blue-no-border:hover {
+  color: white;
+  text-decoration: none;
+  border: 0;
+  background-color: #4cc9f0;
+  -webkit-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
+  -moz-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
+  box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
+}
