--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,13 +11,13 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Home", root_path, class: "nav-link" %>
+          <%= link_to "Home", root_path, class: "btn-blue-no-border" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
+          <%= link_to "Dashboard", dashboard_path, class: "btn-blue-no-border" %>
         </li>
         <li class="nav-item">
-          <%= link_to "New Memory", new_memory_path, class: "nav-link" %>
+          <%= link_to "New Memory", new_memory_path, class: "btn-blue-no-border" %>
         </li>
         <li class="nav-item dropdown">
           <%= cl_image_tag current_user.photo_url, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
@@ -36,9 +36,6 @@
   </div>
 
   <div>
-    <form action="/memories/search" method="get">
-      <input type="text" name="memory" value="<%= params[:memory] %>" placeholder="Which memory are you searching for?">
-      <input type="submit">
-    </form>
+    
   </div>
 </div>
