--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/flagged/photo-1562063304-ec8e6ecbb69c?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8Njl8fGRhZnQlMjBwdW5rfGVufDB8fDB8&auto=format&fit=crop&w=500&q=60);">
   <div class="container">
     <h1>Bring your fantasies to life with <strong>RE:Live</strong> experience the <strong>hottest new form of wish fulfillment</strong>!</h1>
     <p>Be anyone you want to be, for at least a day.</p>
-    <%= link_to "View all memories", memories_path, class:"btn-gradient" %>
+    <%= link_to "View all memories", memories_path, class:"btn-green" %>
   </div>
 </div>
 
