--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,7 +6,7 @@ $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0e0e13;
+$gray: rgb(14, 13, 13);
 $light-gray: #030303;
 $neon-green:#b9e769;
 $neon-pink: #f038ff;
