--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,20 +3,23 @@
   width: 40px;
   border-radius: 50%;
   object-fit: cover;
+  border:$neon-pink 1px solid;
+  
 }
 .avatar-large {
   width: 56px;
   border-radius: 50%;
+  border:$neon-pink 1px solid;
 }
 .avatar-bordered {
   width: 40px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border:$neon-pink 1px solid;
 }
 .avatar-square {
   width: 40px;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: $neon-pink 1px solid;
 }
