--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,15 @@
 // Specific CSS for your home-page
 .banner {
+    align-items: center;
     background-size: cover;
     background-position: center;
     padding: 150px 0;
+    margin-bottom: 20px;
   }
-  
-  .banner h1 {
+  .container{
+      text-align: center;
+  }
+  .container h1 {
     margin: 0;
     color: white;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
@@ -13,7 +17,7 @@
     font-weight: bold;
   }
   
-  .banner p {
+  .container p {
     font-size: 20px;
     color: white;
     opacity: .7;
