--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,16 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/flagged/photo-1562063304-ec8e6ecbb69c?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8Njl8fGRhZnQlMjBwdW5rfGVufDB8fDB8&auto=format&fit=crop&w=500&q=60);">
+  <div class= "container">
+    <%= render 'shared/searchbar' %>
+  </div>  
+</div>
+  
   <div class="container">
-    <h1>Bring your fantasies to life with <strong>RE:Live</strong> experience the <strong>hottest new form of wish fulfillment</strong>!</h1>
-    <p>Be anyone you want to be, for at least a day.</p>
+    <h1>Bring your fantasies to life with <strong>RE:Live</strong> </h1>
+    <p>Be anyone you want to be, for at least a day. Experience the hottest new form of wish fulfillment!
+    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    </p>
     <%= link_to "View all memories", memories_path, class:"btn-green" %>
   </div>
-</div>
 
 
