--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,4 +1,10 @@
-<form action="/memories/search" method="get">
-      <input type="text" name="memory" value="<%= params[:memory] %>" placeholder="Which memory are you searching for?">
-      <input type="submit">
-    </form>
+<div class="wrap">
+  <div class="search">
+      <form action="/memories/search" method="get">
+          <input type="text" class="searchTerm" name="memory" value="<%= params[:memory] %>" placeholder="Which memory are you searching for?">
+          <button type="submit" class="searchButton">
+            <i class="fa fa-search"></i>
+          </button>
+      </form>
+    </div>    
+</div>
