--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 .banner {
-    align-items: center;
+    display: flex;
+    justify-content: center;
     background-size: cover;
     background-position: center;
     padding: 150px 0;
@@ -9,7 +10,7 @@
   .container{
       text-align: center;
   }
-  .container h1 {
+  .container h2 {
     margin: 0;
     color: white;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
