added gloabl h2 to use on every page

--- a/app/views/memories/index.html.erb
+++ b/app/views/memories/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Memories</h1>
+<div class ="container">
+  <h2 class ="h2-global">Memories</h2>
+</div>
+
 <div class="main-container">
   <div class="cards">
     <% @memories.each do |memory| %>
