--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -32,8 +32,9 @@
 
 .card-trip p {
   font-size: 12px;
-  opacity: .7;
+  opacity: .5;
   margin: 0;
+  color: white;
 }
 
 
@@ -43,6 +44,10 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+}
+.card-trip-pricing {
+  opacity: .5;
+  color: white;
 }
 
 .card-trip-infos .card-trip-user {
