changed back button, added spacing, made it more ux friendly

--- a/app/views/memories/index.html.erb
+++ b/app/views/memories/index.html.erb
@@ -19,6 +19,8 @@
         </div>
       </div>
     <% end %>
+    <h4 class= "spacing"> <%= link_to "Back to home", root_path, class: 'btn-pink btn-back'%> </h4>
   </div>
+  
 </div>
-<h4> <%= link_to "Back to home", root_path %> </h4>
+
