--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,4 +7,5 @@
 @import "button";
 @import "searchbar";
 @import "neon-pink-heading";
-@import "h2-global"
+@import "h2-global";
+@import "spacing";
