--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -78,6 +78,14 @@
   -moz-box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
   box-shadow: 10px 10px 99px 6px rgba(185, 231, 105, 1);
 }
+.btn-green-solid {
+  color: #b9e769;
+  border: 1px solid;
+  background-color: #b9e769;
+  font-size: 14px;
+  padding: 10px 20px;
+  font-weight: 300;
+}
 
 .btn-pink {
   color: #f038ff;
