added a solid divided in components

--- a/app/views/memories/show.html.erb
+++ b/app/views/memories/show.html.erb
@@ -9,7 +9,7 @@
         <li>Duration: <%= @memory.duration %></li>
         <li>Location: <%= @memory.location %></li>
     </ul>
-
+    <hr class="solid">
 
     <h2>Reviews</h2>
     <% @memory.reviews.each do |review| %>
