--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -50,6 +50,7 @@
   padding: 1px 20px;
   font-weight: 300;
   color: #4cc9f0;
+  text-align: center;
 }
 .btn-blue-no-border:hover {
   color: white;
