--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Home", root_path, class: "btn-blue-no-border" %>
+          <%= link_to "Browse", memories_path, class: "btn-blue-no-border" %>
         </li>
         <li class="nav-item">
           <%= link_to "Dashboard", dashboard_path, class: "btn-blue-no-border" %>
