--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -20,12 +20,12 @@
       <% @my_bookings.each do |booking| %>
       <div class="card-trip">
           <div>
-            <p><%= booking.memory.name%></p>
-            <p><%= "$#{booking.price}"%></p>
-            <p><%= booking.booking_status.humanize %></p>
-            <p><%= booking.location%></p>
-            <p><%= booking.start_date.strftime("%A, %b %d") %></p>
-            <%= link_to "Leave a Review", new_booking_review_path(booking), class: 'btn-gradient' %>
+            <p><%= "Memory: #{booking.memory.name}"%></p>
+            <p><%= "Price: $#{booking.price}"%></p>
+            <p><%= "Booking Status: #{booking.booking_status.humanize}" %></p>
+            <p><%= "Location: #{booking.location}"%></p>
+            <p><%= "Date: #{booking.start_date.strftime("%A, %b %d")}" %></p>
+            <%= link_to "Leave a Review", new_booking_review_path(booking), class: 'btn-green' %>
           </div>
         </div>
       </div>
