--- a/app/views/dashboards/my_reviews.html.erb
+++ b/app/views/dashboards/my_reviews.html.erb
@@ -24,7 +24,7 @@
             <h2><%= review.booking.memory.name %></h2>
             <p><%= review.content %></p>
             <p><%= "Rating: #{review.rating}/5" %></p>
-            <%= link_to "Delete Review", review_path(review), method: "delete", class: 'btn-green' %>
+            <%= link_to "Delete Review", review_path(review), method: "delete", class: 'btn-pink' %>
           </div>
         </div>
       </div>
