--- a/app/views/memories/new.html.erb
+++ b/app/views/memories/new.html.erb
@@ -1,17 +1,18 @@
 <div class="container">
-  <h1> Share your memories with </h1>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <h1 class="h2-global"> Share your memories</h1>
 
-  <%= simple_form_for([@user, @memory]) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :price %>
-  <%= f.input :duration %>
-  <%= f.input :location %>
-  <%= f.input :category %>
-  <%= f.button :submit, 'Leave a Review', id:'btn-green', class:"btn-green" %>
-  <% end %>
+      <%= simple_form_for([@user, @memory]) do |f| %>
+      <%= f.input :name, label_html:{class:"form-label"}%>
+      <%= f.input :description, label_html:{class:"form-label"} %>
+      <%= f.input :price, label_html:{class:"form-label"} %>
+      <%= f.input :duration, label_html:{class:"form-label"} %>
+      <%= f.input :location, label_html:{class:"form-label"} %>
+      <%= f.input :category, label_html:{class:"form-label"} %>
+      <%= f.button :submit, 'Create your Memory', id:'btn-green', class:"btn-green w-100 my-4" %>
+      <% end %>
+    </div>
+  </div>
 </div>
 
-<div class="container">
-  <%= link_to "Back to Memories", my_memories_path, class: 'btn-pink' %>
-</div>
