removed extra search bar, added margin top for banner and homepage search bar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,5 +34,9 @@
     </ul>
   </div>
 </div>
-<%= render 'shared/searchbarform' %>
+<% unless controller_name === "pages" %>
+
+
+  <%= render 'shared/searchbarform' %>
+<% end %>
 </div>
