--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,6 +6,7 @@
     background-position: center;
     padding: 150px 0;
     margin-bottom: 20px;
+    margin-top: 100px;
   }
   .container{
       text-align: center;
