--- a/app/assets/stylesheets/components/_h2-global.scss
+++ b/app/assets/stylesheets/components/_h2-global.scss
@@ -5,3 +5,13 @@
     font-size: 32px;
     font-weight: bold;
 }
+
+.h2-global-margin {
+    margin: 0;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    font-size: 32px;
+    font-weight: bold;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
