--- a/app/views/memories/index.html.erb
+++ b/app/views/memories/index.html.erb
@@ -1,5 +1,5 @@
 <div class ="container">
-  <h2 class ="h2-global">Book a memory today!</h2>
+  <h2 class ="h2-global-margin">Book a memory today!</h2>
 </div>
 
 <div class="main-container">
