--- a/app/views/memories/new.html.erb
+++ b/app/views/memories/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-8">
-      <h1 class="h2-global"> Share your memories</h1>
+      <h1 class="h2-global-margin"> Share your memories</h1>
 
       <%= simple_form_for([@user, @memory]) do |f| %>
       <%= f.input :name, label_html:{class:"form-label"}%>
