--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -18,6 +18,7 @@
     z-index: 100; /* Behind the navbar */
     padding: 48px 0 0; /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    
   }
   
   @media (max-width: 767.98px) {
@@ -28,6 +29,8 @@
   
   .sidebar-sticky {
     position: relative;
+    background-color: #100f0f;
+    color: #b9e769;
     top: 0;
     height: calc(100vh - 48px);
     padding-top: .5rem;
@@ -44,12 +47,12 @@
   
   .sidebar .nav-link {
     font-weight: 500;
-    color: #333;
+    color: $neon-blue;
+    svg{ color: $neon-blue}
   }
   
   .sidebar .nav-link .feather {
     margin-right: 4px;
-    color: #999;
   }
   
   .sidebar .nav-link.active {
@@ -58,7 +61,7 @@
   
   .sidebar .nav-link:hover .feather,
   .sidebar .nav-link.active .feather {
-    color: inherit;
+    color: $neon-green;
   }
   
   .sidebar-heading {
@@ -100,3 +103,10 @@
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
   }
   
+  .dashboard-text {
+    color: $neon-green;
+  }
+
+  .dashboard-header h1 {
+    color: $neon-pink;
+  }
