--- a/app/views/dashboards/my_reviews.html.erb
+++ b/app/views/dashboards/my_reviews.html.erb
@@ -4,7 +4,7 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">My Reviews</h1>
+        <h1 class="h2" style="color: $neon-pink" >My Reviews</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -18,12 +18,14 @@
       </div>
      
     <% @my_reviews.each do |review| %>
-      <div class="card-trip">
-        <div class="card-trip-infos">
+      <div class="card-trip mb-3">
+        <div class="card-trip-infos d-flex align-items-center p-3">
           <div>
             <h2><%= review.booking.memory.name %></h2>
             <p><%= review.content %></p>
             <p><%= "Rating: #{review.rating}/5" %></p>
+          </div>
+          <div>
             <%= link_to "Delete Review", review_path(review), method: "delete", class: 'btn-pink' %>
           </div>
         </div>
