--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -4,7 +4,7 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Bookings</h1>
+        <h2 class="h2-global">Bookings</h2>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -19,13 +19,13 @@
 
       <% @my_bookings.each do |booking| %>
       <div class="card-trip">
-          <div>
+          <div class = "disp-card">
             <p><%= booking.memory.name%></p>
-            <p><%= "$#{booking.price}"%></p>
+            <p><%= "$#{booking.price}/hour"%></p>
             <p><%= booking.booking_status.humanize %></p>
             <p><%= booking.location%></p>
             <p><%= booking.start_date.strftime("%A, %b %d") %></p>
-            <%= link_to "Leave a Review", new_booking_review_path(booking), class: 'btn-gradient' %>
+           <div class="container"> <%= link_to "Leave a Review", new_booking_review_path(booking), class: 'btn-green' %></div>
           </div>
         </div>
       </div>
